# VMax

./: .gitignore  .pre-commit-config.yaml  README.md  SETUP.md  pyproject.toml
.github/workflows/: ci.yml
src/speechsum/: __init__.py  __main__.py  cli.py  config.py  exceptions.py  pipeline.py
src/speechsum/audio/: extractor.py  loader.py  recorder.py  utils.py
src/speechsum/output/: console.py  json_export.py  markdown.py
src/speechsum/output/web/: app.py
src/speechsum/output/web/static/: app.js  style.css
src/speechsum/output/web/templates/: base.html  index.html
src/speechsum/punctuation/: restorer.py
src/speechsum/stt/: engine.py  model_manager.py
src/speechsum/summarize/: chunker.py  engine.py
tests/: test_audio_extractor.py  test_audio_loader.py  test_audio_recorder.py  test_chunker.py  test_cli.py  test_model_manager.py  test_output.py  test_pipeline.py  test_smoke.py  test_stt_engine.py  test_summarizer.py
tmp/: report.json  report.md
