[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "speechsum"
version = "0.1.0"
description = "Speech recognition and summarization system using Vosk + Hugging Face"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
keywords = ["speech-to-text", "summarization", "vosk", "huggingface", "audio"]

authors = [
  {name = "speechsum"},
]

classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Multimedia :: Sound/Audio :: Speech",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
  "vosk>=0.3.45",
  "transformers>=4.30",
  "torch>=2.0",
  "pydub>=0.25",
  "moviepy>=1.0",
  "sounddevice>=0.4",
  "click>=8.0",
  "rich>=13.0",
  "pydantic>=2.0",
  "pydantic-settings>=2.0",
  "structlog>=23.0",
]

[project.optional-dependencies]
web = [
  "fastapi>=0.100",
  "uvicorn[standard]>=0.20",
  "jinja2>=3.0",
  "python-multipart>=0.0.5",
  "aiofiles>=23.0",
  "itsdangerous>=2.0",
]
dev = [
  "pytest>=7.0",
  "pytest-cov>=4.0",
  "mypy>=1.0",
  "ruff>=0.1",
  "pre-commit>=3.0",
]

[project.scripts]
speechsum = "speechsum.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
speechsum = ["output/web/templates/*", "output/web/static/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
exclude = ["tests/"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4"]
ignore = ["E501"]
